feat: ui detail + button component

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,6 @@ EXCLUDE_REGISTER_COUNTRIES=[]
 SENTRY_ENVIRONMENT=test
 SENTRY_TRACES_SAMPLE_RATE=1.0
 TYPEFORM_ID=id1XsSOE
+
+#env related
+DS2_URL=https://app.jumpo.club/
