--- a/.env.production
+++ b/.env.production
@@ -12,3 +12,6 @@ EXCLUDE_REGISTER_COUNTRIES=["cn"]
 SENTRY_ENVIRONMENT=prod
 SENTRY_TRACES_SAMPLE_RATE=0.2
 TYPEFORM_ID=lQbnwi8A
+
+#env related
+DS2_URL=https://app.kiwidrop.com/
