--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "clean-dist": "rimraf ./dist"
   },
   "alias": {
-    "@/*": "./src/$1"
+    "@/*": "./src/$1",
+    "swiper/css/bundle": "swiper/swiper-bundle.min.css",
+    "swiper/react": "swiper/react/swiper-react.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,9 +43,7 @@
     "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-   
     "classnames": "^2.3.1",
-   
     "env-cmd": "^10.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -55,20 +55,17 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^6.2.6",
     "husky": "^7.0.0",
-   
     "lint-staged": "^12.3.3",
-   
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-   
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-  
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-use": "^17.3.2",
     "sass": "^1.49.7",
+    "swiper": "^9.0.5",
     "typescript": "4.5.5"
   },
   "devDependencies": {
